...      midnight-dev playing White: 266 - 201 - 212  [0.548] 679
...      midnight-dev playing Black: 254 - 228 - 197  [0.519] 679
...      White vs Black: 494 - 455 - 409  [0.514] 1358
Elo difference: 23.3 +/- 15.5, LOS: 99.8 %, DrawRatio: 30.1 %
SPRT: llr 2.95 (100.2%), lbound -2.94, ubound 2.94 - H1 was accepted

Eval in NMP Depth Reduction
Score of midnight-dev vs midnight-latest: 153 - 82 - 121  [0.600] 356
...      midnight-dev playing White: 89 - 33 - 56  [0.657] 178
...      midnight-dev playing Black: 64 - 49 - 65  [0.542] 178
...      White vs Black: 138 - 97 - 121  [0.558] 356
Elo difference: 70.2 +/- 29.6, LOS: 100.0 %, DrawRatio: 34.0 %
SPRT: llr 2.95 (100.1%), lbound -2.94, ubound 2.94 - H1 was accepted

LMR V1
Score of midnight-dev vs midnight-latest: 125 - 54 - 83  [0.635] 262
...      midnight-dev playing White: 64 - 28 - 39  [0.637] 131
...      midnight-dev playing Black: 61 - 26 - 44  [0.634] 131
...      White vs Black: 90 - 89 - 83  [0.502] 262
Elo difference: 96.6 +/- 35.6, LOS: 100.0 %, DrawRatio: 31.7 %
SPRT: llr 2.96 (100.5%), lbound -2.94, ubound 2.94 - H1 was accepted

Transposition Table in QSearch
Score of midnight-dev vs midnight-latest: 337 - 265 - 496  [0.533] 1098
...      midnight-dev playing White: 189 - 127 - 233  [0.556] 549
...      midnight-dev playing Black: 148 - 138 - 263  [0.509] 549
...      White vs Black: 327 - 275 - 496  [0.524] 1098
Elo difference: 22.8 +/- 15.2, LOS: 99.8 %, DrawRatio: 45.2 %
SPRT: llr 2.96 (100.7%), lbound -2.94, ubound 2.94 - H1 was accepted

Improve Time Managment
Score of midnight-dev vs midnight-latest: 148 - 89 - 223  [0.564] 460
...      midnight-dev playing White: 80 - 41 - 109  [0.585] 230
...      midnight-dev playing Black: 68 - 48 - 114  [0.543] 230
...      White vs Black: 128 - 109 - 223  [0.521] 460
Elo difference: 44.8 +/- 22.8, LOS: 100.0 %, DrawRatio: 48.5 %
SPRT: llr 2.99 (101.6%), lbound -2.94, ubound 2.94 - H1 was accepted